create a basic navbar component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,5 +19,9 @@
 body {
   color: var(--foreground);
   background: var(--background);
+}
+
+.text-poppins{
   font-family: var(--font-poppins);
 }
+
