add cv download feature

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
   --color-behind_img: #D3D3D3;
   --color-behind_sosmed: #D1CFD0 ;
   --color-shadow_primary: #ffffff80;
-  
+  --color-download_cv: #3C4049;
   --radius-6xl: 4rem;
 }
 
